--- a/.gitignore
+++ b/.gitignore
@@ -81,8 +81,9 @@ target/
 profile_default/
 ipython_config.py
 
+# 2021/04/20 needs pyenv to specify version
 # pyenv
-.python-version
+# .python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
